# docs/web_deploy/openapi.yaml
@@ -398,20 +398,32 @@ components:
         - type: object
           required:
             - attributes
+            - relationships
           properties:
+            relationships:
+              type: object
+              required:
+                - user
+              properties:
+                user:
+                  type: string
             attributes:
               type: object
               required:
                 - template
                 - background_img
+                - is_completed
+                - template_name
               properties:
                 template:
                   type: object
                   format: json.RawMessage
                 background_img:
-                  type: array
-                  items:
-                    type: byte
+                  type: string
+                is_completed:
+                  type: boolean
+                template_name:
+                  type: string
     TemplateKey:
       type: object
       required:
